@@ -74,6 +74,7 @@ DETAILED CHANGES:
 	- FIXED: rlSetVertexAttribute takes pointer as Buffer.
 	- CHANGE: UnloadMaterial can also optionally free textures and shader.
 	- ADDED: FontCopy.
+	- ADDED: GuiSetSliderDragging, GuiGetSliderDragging, GuiSetSliderActive and GuiGetSliderActive.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.7.0		Using Raylib 5.0 and Forked Raygui 4.0
